[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[zest.releaser]
; semver-style versions
version-levels = 3

; tags: vX.Y.Z; the double-percent is a guard against ConfigParser.
#tag-format = v%%(version)s

; Version flag location (we use __version__)
python-file-with-version = src/kconfgen.py

[mypy]
mypy_path = dev/mypy

[distutils]
index-servers = pypi
